--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <h1>Discover hidden places in the world around you</h1>
     <a href="https://0osddjom28e113n0ag8665fr7dl7jui0r1c3mr88ir7uf1mlg930.codecademy.cloud/">Download Excursion (Coming soon!)</a>
   </div>
+  <div id="video">
+    <video src="./resources/videos/excursion.mp4">
+
+    </video>
+
+  </div>
 
 
 
