--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
   </div>
   <div id="video">
     <video src="./resources/videos/excursion.mp4">
-
     </video>
+  </div>
+  <div id="guide">
+    <h2>Your personal travel guide</h2>
+    <p>
+      Excursion remembers places you like, and recommends new points of
+      interest around you.
+    </p>
+    <img src="./resources/images/camp.jpg" alt="A beautiful sky!">
 
   </div>
 
