Add phone, footer section

--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
       interest around you.
     </p>
     <img src="./resources/images/camp.jpg" alt="A beautiful sky!">
-
   </div>
-
-
+  <div id="phone">
+    <img src="./resources/images/phone.png" alt="A mobile phone">
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="https://0osddjom28e113n0ag8665fr7dl7jui0r1c3mr88ir7uf1mlg930.codecademy.cloud/">Download Excursion (Coming soon!)</a>
+  </div>
+  <div id="footer">
+    <p>
+      © Excursion
+    </p>
+  </div>
 
 </body>
 </html>
