update video w/ autoplay

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   </div>
   <div id="video">
     <p>
-      <video src="./resources/videos/excursion.mp4">
+      <video autoplay>
+      <source src="./resources/videos/excursion.mp4" type="video/mp4">
+        Your browser does not support the video tag.
       </video>
     </p>
   </div>
