update video w/ autoplay

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
   <div id="video">
     <p>
-      <video autoplay>
+      <video autoplay loop>
       <source src="./resources/videos/excursion.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
